# OndePi

./: .gitignore  README.md  TODO.md  config.example.toml  install.sh  pyproject.toml
docs/: architecture.md  azuracast_metadata.md  hardware.md
m5stack/: README.md  ondepi_serial_protocol.md  ondepi_stub.ino
src/ondepi/: __init__.py  api.py  audio.py  azuracast.py  cli.py  config.py  main.py  serial_device.py  serial_protocol.py  state.py  streamer.py
tests/: test_audio.py  test_azuracast.py  test_config.py  test_streamer.py
web/: app.js  index.html  style.css
